Fixed NAVLIST visibility and created dynamic path reading for nested directories

--- a/caped-crusaders-style.css
+++ b/caped-crusaders-style.css
@@ -229,7 +229,7 @@ body, #page-title-table tr th, #page-title-table th, #page-title-table tr td, #p
 
   padding: 10px;
 
-  visibility: hidden;
+  visibility: visible;
 
   height: auto;
   border: 5px solid rgb(100,100,100);
